fix(styles): fix whitespace in code instructions (#50679)

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -466,6 +466,10 @@ code {
   overflow-wrap: anywhere;
 }
 
+.challenge-instructions code {
+  white-space: break-spaces;
+}
+
 .panel {
   border-radius: 0;
   background-color: transparent;
